# interra_api

./: Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
src/components/: auth.rs  endpoints.rs  interra.rs  serde_models.rs
static/: root.html
