[package]
name = "interra_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }
actix-web = "4.3.1"
tokio = { version = "1.29.0", features = ["full"] }
log = "0.4.0"
env_logger = "0.10.0"
serde_repr = "0.1.12"
